--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,11 +1,13 @@
-worker_processes auto;
+worker_processes  auto;
+worker_rlimit_nofile 1000; # Increase for Laravel Reverb
 
-error_log /dev/stderr warn;
-pid /var/run/nginx.pid;
-daemon off;
+error_log  /dev/stderr $LOG_OUTPUT_LEVEL;
+pid        /var/run/nginx.pid;
+daemon off; # Executed through Docker entrypoint
+
 
 events {
-    worker_connections 1024;
+    worker_connections 1000; # Increase for Laravel Reverb
     multi_accept on;
 }
 
@@ -14,27 +16,24 @@ http {
     sendfile on;
     tcp_nopush on;
     types_hash_max_size 2048;
-    server_tokens off;
-
-    keepalive_timeout 65;
+    server_tokens $NGINX_SERVER_TOKENS;
 
     server_names_hash_bucket_size 128;
-    server_name_in_redirect off;
+    server_name_in_redirect       off;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-    ssl_prefer_server_ciphers on;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log  /dev/stdout  main;
 
-    access_log /dev/stdout main;
+    gzip  on;
+    keepalive_timeout  65;
 
-    gzip on;
-
+    # Upgrade to websocket connection (if requested)
     map $http_upgrade $connection_upgrade {
             default       "upgrade";
     }
