--- a/nginx/site-opts.d/http.conf.template
+++ b/nginx/site-opts.d/http.conf.template
@@ -1,38 +1,35 @@
-listen 8080 default_server;
-listen [::]:8080 default_server;
+server {
+    listen 8080 default_server;
+    listen [::]:8080 default_server;
 
-root $NGINX_WEBROOT;
+    server_name _; # Listen for all hosts
+    root $NGINX_WEBROOT;
 
-server_name _;
-server_tokens off;
+    include snippets/security.conf;
 
-index index.php;
+    index index.html index.htm index.php;
 
-charset utf-8;
+    charset utf-8;
 
-include healthcheck.conf;
+    include snippets/healthcheck.conf;
 
-location / {
-    try_files $uri $uri/ /index.php?$query_string;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    include snippets/performance.conf;
+    access_log off;
+
+    error_page 404 /index.php;
+
+    location ~ \.php$ {
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+        # fastcgi_param  SCRIPT_FILENAME $request_filename;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+
+        fastcgi_buffers     $NGINX_FASTCGI_BUFFERS;
+        fastcgi_buffer_size $NGINX_FASTCGI_BUFFER_SIZE;
+    }
 }
-
-location = /favicon.ico { access_log off; log_not_found off; }
-location = /robots.txt  { access_log off; log_not_found off; }
-
-error_page 404 /index.php;
-
-location ~ index\.php$ {
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass 127.0.0.1:9000;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-    include fastcgi_params;
-    fastcgi_buffers 8 8k;
-    fastcgi_buffer_size 8k;
-}
-
-location ~ /\.(?!well-known).* {
-    deny all;
-}
-
-include /etc/nginx/server-opts.d/remoteip.conf;
