--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,20 @@ jobs:
                   username: ${{ secrets.DOCKER_HUB_USER }}
                   password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-            - name: Build the image
+            - name: Build FPM image
               run: |
                   docker build \
-                      -f Dockerfile \
-                      -t ${{ env.DOCKER_IMAGE_NAME }}:latest \
-                      -t ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} \
+                      -f Dockerfile.fpm \
+                      -t ${{ env.DOCKER_IMAGE_NAME }}:8.3-fpm \
+                      -t ${{ env.DOCKER_IMAGE_NAME }}:8.3-fpm-${{ github.sha }} \
+                      .
+
+            - name: Build CLI image
+              run: |
+                  docker build \
+                      -f Dockerfile.cli \
+                      -t ${{ env.DOCKER_IMAGE_NAME }}:8.3-cli \
+                      -t ${{ env.DOCKER_IMAGE_NAME }}:8.3-cli-${{ github.sha }} \
                       .
 
             - name: Push built image to Docker Hub
