--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,5 +1,8 @@
 FROM serversideup/php:8.3-cli
 
+ARG NODE_VERSION=20
+ARG POSTGRES_VERSION=15
+
 ENV PHP_OPCACHE_ENABLE=1
 ENV APP_BASE_DIR=/var/www
 ENV COMPOSER_ALLOW_SUPERUSER=0
@@ -10,7 +13,7 @@ WORKDIR /var/www
 USER root
 
 # Install and configure Node
-RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -
+RUN curl -sL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash -
 RUN apt-get update && apt-get install -y vim nodejs iputils-ping
 RUN npm i -g yarn
 
@@ -22,8 +25,17 @@ RUN curl -fsSL https://deno.land/install.sh | sh
 RUN install-php-extensions bcmath decimal exif ffi gd grpc intl opcache pcntl \
     pdo_mysql pdo_pgsql redis swoole
 
+# Install MariaDB and Postgres client binaries (for database dumping)
+RUN curl -sS https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/keyrings/pgdg.gpg >/dev/null \
+    && echo "deb [signed-by=/etc/apt/keyrings/pgdg.gpg] http://apt.postgresql.org/pub/repos/apt jammy-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
+    && apt-get update \
+    && apt-get install -y mariadb-client \
+    && apt-get install -y postgresql-client-$POSTGRES_VERSION
+
 # Clean up the image to remove stale packages
-RUN apt-get autoremove && apt-get autoclean
+RUN apt-get -y autoremove \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Add custom entrypoint startup script
 COPY --chmod=755 entrypoint.d/ /etc/entrypoint.d/
