--- a/Dockerfile.fpm
+++ b/Dockerfile.fpm
@@ -1,61 +1,31 @@
-FROM serversideup/php:8.3-fpm-nginx
+FROM serversideup/php:8.3-fpm
+
+ARG USER_ID=1000
+ARG GROUP_ID=1000
 
 ARG NODE_VERSION=20
-# ARG POSTGRES_VERSION=15
 
-ENV PHP_OPCACHE_ENABLE=1
 ENV APP_BASE_DIR=/var/www
 ENV COMPOSER_ALLOW_SUPERUSER=0
-ENV NGINX_WEBROOT=/var/www/public
-ENV PHP_MAX_EXECUTION_TIME=30
 
-# Custom NGINX template variables
-ENV NGINX_UPLOAD_LIMIT=10M
-ENV NGINX_REQUEST_TIMEOUT=30
-ENV HEALTHCHECK_TIMEOUT=5s
+ENV PHP_OPCACHE_ENABLE=1
+ENV PHP_DATE_TIMEZONE=UTC
+ENV PHP_MAX_EXECUTION_TIME=30
 
 WORKDIR /var/www
 
 USER root
 
-# Install and configure Node
-RUN curl -sL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash -
-RUN apt-get update && apt-get install -y vim nodejs iputils-ping
-RUN npm i -g yarn
+RUN docker-php-serversideup-set-id www-data $USER_ID:$GROUP_ID
 
-# Install Bun and Deno
-RUN curl -fsSL https://bun.sh/install | bash
-RUN curl -fsSL https://deno.land/install.sh | sh
+RUN curl -sL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
+    && apt-get update && apt-get install -y vim nodejs iputils-ping \
+    && npm i -g yarn
 
-# Install required PHP extensions
-RUN install-php-extensions bcmath decimal exif ffi gd grpc intl opcache pcntl \
-    pdo_mysql pdo_pgsql redis swoole
+RUN install-php-extensions bcmath decimal exif ffi gd grpc intl
 
-# Install MySQL and Postgres client binaries
-# RUN curl -sS https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/keyrings/pgdg.gpg >/dev/null \
-#     && echo "deb [signed-by=/etc/apt/keyrings/pgdg.gpg] http://apt.postgresql.org/pub/repos/apt jammy-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
-#     && apt-get update \
-#     && apt-get install -y default-mysql-client \
-#     && apt-get install -y postgresql-client-$POSTGRES_VERSION
-
-# Clean up the image to remove stale packages
 RUN apt-get -y autoremove \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Remove existing NGINX config to prevent conflicts
-RUN rm -rf /etc/nginx/nginx.conf.template \
-    /etc/nginx/conf.d \
-    /etc/nginx/server-opts.d \
-    /etc/nginx/site-opts.d \
-    /etc/nginx/snippets
-
-# Add custom NGINX configuration and custom entrypoint startup script
-COPY --chmod=755 nginx/ /etc/nginx/
-COPY --chmod=755 entrypoint.d/ /etc/entrypoint.d/
-
-# Configure proper permissions for NGINX configuration
-RUN docker-php-serversideup-s6-init
-RUN docker-php-serversideup-set-file-permissions --owner www-data:www-data --service nginx
 
 USER www-data
