--- a/Dockerfile.fpm-nginx
+++ b/Dockerfile.fpm-nginx
@@ -1,15 +1,21 @@
-FROM serversideup/php:8.3-cli
+FROM serversideup/php:8.3-fpm-nginx
 
 ARG USER_ID=1000
 ARG GROUP_ID=1000
 
 ARG NODE_VERSION=20
-ARG POSTGRES_VERSION=15
 
 ENV APP_BASE_DIR=/var/www
 ENV COMPOSER_ALLOW_SUPERUSER=0
 
+ENV PHP_OPCACHE_ENABLE=1
 ENV PHP_DATE_TIMEZONE=UTC
+ENV PHP_MAX_EXECUTION_TIME=30
+
+ENV NGINX_WEBROOT=/var/www/public
+ENV NGINX_UPLOAD_LIMIT=10M
+ENV NGINX_REQUEST_TIMEOUT=30
+ENV HEALTHCHECK_TIMEOUT=5s
 
 WORKDIR /var/www
 
@@ -23,17 +29,19 @@ RUN curl -sL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
 
 RUN install-php-extensions bcmath decimal exif ffi gd grpc intl
 
-# Install MySQL and Postgres client binaries
-RUN curl -sS https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/keyrings/pgdg.gpg >/dev/null \
-    && echo "deb [signed-by=/etc/apt/keyrings/pgdg.gpg] http://apt.postgresql.org/pub/repos/apt jammy-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
-    && apt-get update \
-    && apt-get install -y default-mysql-client \
-    && apt-get install -y postgresql-client-$POSTGRES_VERSION
-
 RUN apt-get -y autoremove \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
+RUN rm -rf /etc/nginx/nginx.conf.template \
+    /etc/nginx/conf.d \
+    /etc/nginx/server-opts.d \
+    /etc/nginx/site-opts.d \
+    /etc/nginx/snippets
+
+COPY --chmod=755 nginx/ /etc/nginx/
 COPY --chmod=755 entrypoint.d/ /etc/entrypoint.d/
+
+RUN docker-php-serversideup-set-file-permissions --owner www-data:www-data --service nginx
 
 USER www-data
